--- a/web/templates/web.html
+++ b/web/templates/web.html
@@ -17,9 +17,13 @@
             <div id="current-clip">-</div>
         </div>
         <div id="controls" class="section">
-            <button id="skip">skip</button>
+            <button id="pause" title="toggle pause">pause</button>
+            <button id="skip" title="skip clip">skip</button>
         </div>
-        <div id="history" class="section"></div>
+        <div id="history" class="section">
+            <div class="title">Recent history:</div>
+            <div id="history-clips"></div>
+        </div>
         <div id="stats" class="section"></div>
     </div>
 </body>
