--- a/web/templates/web.html
+++ b/web/templates/web.html
@@ -18,13 +18,17 @@
         </div>
         <div id="controls" class="section">
             <button id="pause" title="toggle pause">pause</button>
-            <button id="skip" title="skip clip">skip</button>
+            <button id="skip" title="skip the current clip">skip</button>
         </div>
         <div id="history" class="section">
             <div class="title">Recent history:</div>
             <div id="history-clips"></div>
         </div>
         <div id="stats" class="section"></div>
+        <div id="about" class="section">
+            The code for this project is
+            <a href="https://github.com/tim-we/py-radio">available on GitHub</a>.
+        </div>
     </div>
 </body>
 </html>
