--- a/web/static/web.css
+++ b/web/static/web.css
@@ -2,6 +2,7 @@ html, body {
     margin: 0px;
     padding: 0px;
     font-family: sans-serif;
+    text-rendering: optimizeLegibility;
 }
 
 div {
@@ -86,4 +87,34 @@ div {
 
 #history-clips {
     text-align: center;
+}
+
+#about {
+    margin-top: 20px;
+    color: rgb(100,100,100);
+    font-size: 14px;
+    text-align: center;
+}
+
+#controls button {
+    font-size: 20px;
+    color: #e6e8ea;
+    background-color: #2b5b84;
+    background-image: linear-gradient(#3776ab 10%,#2b5b84 90%);
+    border-top: 1px solid #3d83be;
+    border-right: 1px solid #3776ab;
+    border-bottom: 1px solid #3776ab;
+    border-left: 1px solid #3d83be;
+    box-shadow: inset 0 0 5px rgba(55,118,171,0.2);
+    text-align: left;
+    white-space: nowrap;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-left: 5px;
+    padding: .4em .75em .35em;
+}
+
+#controls button:hover {
+    color: white;
+    box-shadow: inset 0 0 6px rgba(100,200,255,0.25);
 }
