--- a/web/static/web.css
+++ b/web/static/web.css
@@ -114,7 +114,13 @@ div {
     padding: .4em .75em .35em;
 }
 
-#controls button:hover {
+#controls button:not(.active):hover {
     color: white;
     box-shadow: inset 0 0 6px rgba(100,200,255,0.25);
+}
+
+#controls button.active {
+    color: rgb(182,182,182);
+    box-shadow: inset 0 0 7px rgba(55,118,171,0.75);
+    opacity: 0.75;
 }
