--- a/web/static/web.css
+++ b/web/static/web.css
@@ -97,6 +97,12 @@ div {
 }
 
 #controls button {
+    position: relative;
+    box-sizing: border-box;
+    height: 42px;
+    margin-left: 5px;
+    padding: .4em .75em .35em;
+
     font-size: 20px;
     color: #e6e8ea;
     background-color: #2b5b84;
@@ -106,17 +112,38 @@ div {
     border-bottom: 1px solid #3776ab;
     border-left: 1px solid #3d83be;
     box-shadow: inset 0 0 5px rgba(55,118,171,0.2);
-    text-align: left;
+    text-align: center;
     white-space: nowrap;
     cursor: pointer;
     border-radius: 5px;
-    margin-left: 5px;
-    padding: .4em .75em .35em;
+    vertical-align: top;
+}
+
+#controls button.img {
+    width: 75px;
+}
+
+#controls button.img::after {
+    content: " ";
+    font-size: 0;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    background-image: var(--img);
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.9;
 }
 
 #controls button:not(.active):hover {
     color: white;
     box-shadow: inset 0 0 6px rgba(100,200,255,0.25);
+}
+
+#controls button.img:not(.active):hover::after {
+    opacity: 1;
 }
 
 #controls button.active {
