HTML + CSS simplifications

--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -29,14 +29,11 @@ body {
     padding: 0px;
 }
 
-.section {
-    width: 90%;
-    width: calc(100% - 20px);
+#content > div {
+    box-sizing: border-box;
+    width: 100%;
     margin-top: 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 5px 10px;
 }
 
 #now {
@@ -127,6 +124,7 @@ body {
     background-image: var(--img);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: contain;
     opacity: 0.9;
 }
 
