--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -87,11 +87,12 @@ body {
 }
 
 #controls button {
-    position: relative;
+    display: inline-grid;
+    place-items: center;
     box-sizing: border-box;
     height: 42px;
     margin-left: 5px;
-    padding: .4em .75em .35em;
+    min-width: 50px;
 
     font-size: 20px;
     color: #e6e8ea;
@@ -109,22 +110,7 @@ body {
     vertical-align: top;
 }
 
-#controls button.img {
-    width: 75px;
-}
-
-#controls button.img::after {
-    content: " ";
-    font-size: 0;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    background: var(--img);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
+#controls button > img {
     opacity: 0.9;
 }
 
@@ -133,7 +119,7 @@ body {
     box-shadow: inset 0 0 6px rgba(100,200,255,0.25);
 }
 
-#controls button.img:not(.active):hover::after {
+#controls button:not(.active):hover > img {
     opacity: 1;
 }
 
