--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0px;
     font-family: sans-serif;
     text-rendering: optimizeLegibility;
+    --bg-color: white;
 }
 
 div {
@@ -13,6 +14,8 @@ div {
 body {
     display: grid;
     grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+    background-color: var(--bg-color);
 }
 
 #header {
@@ -52,10 +55,6 @@ body {
     text-align: center;
 }
 
-#controls {
-    text-align: right;
-}
-
 #history {
     background-color: rgb(200,200,200);
     color: rgb(42,42,42);
@@ -79,11 +78,10 @@ body {
     text-align: center;
 }
 
-#about {
-    margin-top: 20px;
-    color: rgb(100,100,100);
-    font-size: 14px;
-    text-align: center;
+#controls {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #controls button {
@@ -91,8 +89,9 @@ body {
     place-items: center;
     box-sizing: border-box;
     height: 42px;
-    margin-left: 5px;
-    min-width: 60px;
+    min-width: 42px;
+    flex-basis: 75px;
+    flex-grow: 1;
 
     font-size: 20px;
     color: #e6e8ea;
@@ -108,6 +107,10 @@ body {
     cursor: pointer;
     border-radius: 5px;
     vertical-align: top;
+}
+
+#controls button:not(:first-of-type) {
+    margin-left: 6px;
 }
 
 #controls button > img {
@@ -127,4 +130,13 @@ body {
     color: rgb(182,182,182);
     box-shadow: inset 0 0 7px rgba(55,118,171,0.75);
     opacity: 0.75;
+}
+
+#about {
+    margin-top: 10px;
+    padding: 10px 0px;
+    color: rgb(100,100,100);
+    font-size: 14px;
+    text-align: center;
+    background-color: var(--bg-color);
 }
