--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -3,6 +3,7 @@ html, body {
     padding: 0px;
     font-family: sans-serif;
     text-rendering: optimizeLegibility;
+    --bg-color: white;
 }
 
 div {
@@ -13,6 +14,8 @@ div {
 body {
     display: grid;
     grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+    background-color: var(--bg-color);
 }
 
 #header {
@@ -50,10 +53,8 @@ body {
 #now > #current-clip {
     color: rgb(64,64,64);
     text-align: center;
-}
-
-#controls {
-    text-align: right;
+    font-size: 1.2em;
+    margin-top: 3px;
 }
 
 #history {
@@ -79,19 +80,20 @@ body {
     text-align: center;
 }
 
-#about {
-    margin-top: 20px;
-    color: rgb(100,100,100);
-    font-size: 14px;
-    text-align: center;
+#controls {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 #controls button {
-    position: relative;
+    display: inline-grid;
+    place-items: center;
     box-sizing: border-box;
     height: 42px;
-    margin-left: 5px;
-    padding: .4em .75em .35em;
+    min-width: 42px;
+    flex-basis: 75px;
+    flex-grow: 1;
 
     font-size: 20px;
     color: #e6e8ea;
@@ -109,22 +111,11 @@ body {
     vertical-align: top;
 }
 
-#controls button.img {
-    width: 75px;
+#controls button:not(:first-of-type) {
+    margin-left: 6px;
 }
 
-#controls button.img::after {
-    content: " ";
-    font-size: 0;
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    background: var(--img);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
+#controls button > img {
     opacity: 0.9;
 }
 
@@ -133,7 +124,7 @@ body {
     box-shadow: inset 0 0 6px rgba(100,200,255,0.25);
 }
 
-#controls button.img:not(.active):hover::after {
+#controls button:not(.active):hover > img {
     opacity: 1;
 }
 
@@ -141,4 +132,13 @@ body {
     color: rgb(182,182,182);
     box-shadow: inset 0 0 7px rgba(55,118,171,0.75);
     opacity: 0.75;
+}
+
+#about {
+    margin-top: 10px;
+    padding: 10px 0px;
+    color: rgb(100,100,100);
+    font-size: 14px;
+    text-align: center;
+    background-color: var(--bg-color);
 }
