--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -145,3 +145,52 @@ body {
     text-align: center;
     background-color: var(--bg-color);
 }
+
+#song-list-container {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background-color: rgba(16,16,16,0.42);
+    display: none;
+}
+
+#song-list-container.show {
+    display: grid;
+    place-items: center;
+}
+
+#song-list-modal {
+    width: 500px;
+    height: 650px;
+    max-width: 100vw;
+    max-height: 100vh;
+    background-color: white;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    box-shadow: 0px 0px 20px 1px rgba(0,0,0,0.25);
+}
+
+#song-list-controls {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    border-bottom: 2px solid rgb(16,16,16);
+}
+
+#song-filter {
+    box-sizing: border-box;
+    height: 42px;
+    border: none;
+    padding-left: 10px;
+}
+
+#song-list-close {
+    width: 42px;
+    height: 42px;
+    box-sizing: border-box;
+    background-color: rgb(182, 182, 182);
+    background-image: url("../img/close.svg");
+    border: none;
+    cursor: pointer;
+}
