--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -162,8 +162,8 @@ body {
 }
 
 #song-list-modal {
-    width: 500px;
-    height: 650px;
+    width: 650px;
+    height: 800px;
     max-width: 100vw;
     max-height: 100vh;
     background-color: white;
@@ -193,4 +193,24 @@ body {
     background-image: url("../img/close.svg");
     border: none;
     cursor: pointer;
+}
+
+#song-list {
+    padding: 5px 0px;
+    overflow-y: scroll;
+}
+
+#song-list .song {
+    font-size: 1.2em;
+    padding: 5px 5px;
+}
+
+#song-list .song:nth-of-type(even) {
+    background-color: rgb(240,240,240);
+}
+
+#song-list .song .folder {
+    color: rgb(64,64,64);
+    font-size: 0.8em;
+    margin-right: 2px;
 }
