--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -215,31 +215,34 @@ body {
     margin-right: 2px;
 }
 
-#song-list .song button {
-    box-sizing: border-box;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    border: none;
+#song-list .song .buttons {
+    margin-top: 4px;
+}
+
+#song-list .song .buttons a::before {
+    content: " ";
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    cursor: default;
+    width: 20px;
+    height: 20px;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
-    cursor: pointer;
-    margin-left: 8px;
-    vertical-align: top;
-    opacity: 0.6;
+    margin-right: 2px;
+    vertical-align: middle;
 }
 
-#song-list .song:hover button {
-    opacity: 1;
+#song-list .song .buttons a:not(:last-of-type) {
+    margin-right: 10px;
 }
 
-#song-list .song button.add {
-    background-color: #2790ec;
+#song-list .song a.add::before {
+    top: -1;
     background-image: url("../img/add.svg");
 }
 
-#song-list .song button.download {
-    background-color: yellow;
+#song-list .song a.download::before {
     background-image: url("../img/download.svg");
 }
