--- a/web/static/css/web.css
+++ b/web/static/css/web.css
@@ -168,6 +168,7 @@ body {
 #song-list-container.show {
     display: grid;
     place-items: center;
+    backdrop-filter: blur(2px);
 }
 
 #song-list-modal {
